[project]
name = "untitled"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Kevin Zhao", email = "kzhao16@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pyrefly>=0.46.0",
    "ruff>=0.14.10",
]

[tool.pyrefly]
project-includes = ["**/*.py*", "**/*.ipynb"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
preview = true

isort = { known-first-party = ["untitled"] }

select = [
  "C",
  "E",
  "F",
  "I",
  "W",
  "CPY001",
  "RUF013",
  "UP006",
  "PERF102",
  "PLC1802",
  "PLC0208",
  "D",
  "RUF002",
  "DOC102",
  "DOC202",
  "DOC403",
  "DOC502",
]

ignore = [
  "C901", # complex structure / mccabe complexity
  "E501", # line-too-long (formatter handles)
  "E741", # ambiguous variable name
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D203", # conflict with D211
  "D213", # conflict with D212
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F403"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
